--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 body {
   max-width: 1600px;
   margin: auto;
+  font-family: Arial, sans-serif;
 }
 
 header {
@@ -30,7 +31,7 @@ header h1 {
   animation: fadeIn 0.5s ease-in;
   opacity: 0;
   animation-fill-mode: forwards;
-  animation-delay: 0.5s;
+  animation-delay: 0.25s;
   background-color: rgba(208, 0, 60, 0.4);
 }
 
@@ -41,8 +42,8 @@ header h1::before {
   width: 100%;
   left: 0;
   position: absolute;
-  animation: rollOutLeft 0.8s linear;
-  animation-delay: 0.5s;
+  animation: rollOutLeft 1s linear;
+  animation-delay: 0.25s;
 }
 
 header h1::after {
@@ -53,14 +54,8 @@ header h1::after {
   right: 0;
   bottom: 0;
   position: absolute;
-  animation: rollOutRight 0.8s linear;
-  animation-delay: 0.5s;
-}
-
-@media (max-width: 800px) and (orientation: landscape) {
-  header h1 {
-    top: 55vh;
-  }
+  animation: rollOutRight 1s linear;
+  animation-delay: 0.25s;
 }
 
 @media (min-width: 800px) {
@@ -138,20 +133,33 @@ header h1::after {
   }
 }
 
-.section-first {
+.section_first {
   height: 2000px;
   background-color: white;
   position: relative;
+  padding-top: 50px;
 }
 
-.section-first::before {
+.section_first::before {
   position: absolute;
   content: "";
   display: inline-block;
   height: 1vh;
-  width: 100vw;
+  width: 100%;
   background-color: white;
   top: -2.5vh;
+}
+
+.section_first h2 {
+  text-align: center;
+  font-size: 2.5em;
+  color: #ff0054;
+}
+
+.section_first p {
+  margin: 50px auto 50px auto;
+  text-align: justify;
+  width: 78vw;
 }
 
 /*# sourceMappingURL=styles.css.map */
