parallax done, plus subtle changes to header and first section

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ header {
 
 header h1 {
   font-family: 'Damion', cursive;
+  font-weight: lighter;
   height: 140px;
   width: 100%;
   color: white;
@@ -38,7 +39,7 @@ header h1 {
   animation: fadeIn 0.5s ease-in;
   animation-fill-mode: forwards;
   animation-delay: 0.25s;
-  background-color: rgba(208, 0, 60, 0.4);
+  background-color: rgba(208, 0, 60, 0.65);
   opacity: 0;
   cursor: default;
 }
@@ -143,7 +144,8 @@ header h1::after {
   background-color: white;
   position: relative;
   padding-top: 50px;
-  border-bottom: 1px solid lightgrey;
+  border-bottom: 1px solid #f2a705;
+  border-top: 1px solid #f2a705;
 }
 
 .section_first::before {
@@ -154,6 +156,8 @@ header h1::after {
   width: 100%;
   background-color: white;
   top: -2.5vh;
+  border-bottom: 1px solid #f2a705;
+  border-top: 1px solid #f2a705;
 }
 
 .section_first::after {
@@ -164,12 +168,16 @@ header h1::after {
   width: 100%;
   background-color: white;
   bottom: -2.5vh;
+  border-bottom: 1px solid #f2a705;
+  border-top: 1px solid #f2a705;
 }
 
 .sf_header {
+  font-family: 'Damion', cursive;
+  font-weight: lighter;
   text-align: center;
-  font-size: 2.5em;
-  color: #ff0054;
+  font-size: 3.5em;
+  color: #d0003c;
   transition: 1s;
   opacity: 0;
   transform: translateY(-50px);
@@ -188,6 +196,7 @@ header h1::after {
       align-items: center;
   padding-bottom: 150px;
   overflow: hidden;
+  margin-bottom: -50px;
 }
 
 .sf_pic {
@@ -208,19 +217,25 @@ header h1::after {
   opacity: 0;
   text-align: justify;
   margin-top: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
   transform: translateX(300px);
 }
 
 .sf_textblock h2 {
-  color: #ff0054;
-  text-align: right;
-  margin-bottom: 20px;
-  border-bottom: 2px dotted #ff0054;
+  color: #d0003c;
+  text-align: center;
+  margin-bottom: 30px;
+  border-bottom: 2px dotted #d0003c;
+  padding-bottom: 30px;
 }
 
 @media (min-width: 800px) {
   .section_first {
     padding-top: 100px;
+  }
+  .sf_container {
+    margin-bottom: 0px;
   }
   .sf_header {
     margin-bottom: 50px;
@@ -229,7 +244,7 @@ header h1::after {
     width: 500px;
   }
   .sf_pic {
-    height: 350px;
+    height: 360px;
     width: auto;
   }
 }
@@ -247,11 +262,12 @@ header h1::after {
 }
 
 .section_parallax {
-  height: 40vw;
+  height: 70vw;
   width: 100%;
   position: relative;
   overflow: hidden;
   z-index: -20;
+  background-color: #fff4f7;
 }
 
 .section_parallax div {
@@ -264,7 +280,7 @@ header h1::after {
   height: 18vw;
   width: 18vw;
   left: 45%;
-  bottom: -30vw;
+  bottom: -18vw;
   z-index: -1;
   background-image: url("../img/praline1.png");
 }
@@ -273,16 +289,17 @@ header h1::after {
   height: 10vw;
   width: 10vw;
   left: 30%;
-  bottom: -10vw;
-  z-index: -2;
-  background-image: url("../img/strawberry1.jpg");
+  bottom: -3vw;
+  z-index: -3;
+  background-image: url("../img/strawberry1.png");
+  opacity: 0.8;
 }
 
 .prlx3 {
-  height: 13vw;
-  width: 13vw;
+  height: 16vw;
+  width: 16vw;
   left: 80%;
-  bottom: -40vw;
+  bottom: -38vw;
   z-index: -2;
   background-image: url("../img/cupcake1.png");
 }
@@ -291,7 +308,7 @@ header h1::after {
   height: 12vw;
   width: 12vw;
   left: 10%;
-  bottom: 10vw;
+  bottom: 17vw;
   z-index: -2;
   background-image: url("../img/raspberry2.png");
 }
@@ -300,7 +317,7 @@ header h1::after {
   height: 17vw;
   width: 17vw;
   left: 60%;
-  bottom: 0vw;
+  bottom: 10vw;
   z-index: -1;
   background-image: url("../img/praline1.png");
 }
@@ -309,36 +326,95 @@ header h1::after {
   height: 12vw;
   width: 12vw;
   left: 80%;
-  bottom: 0vw;
+  bottom: 8vw;
   z-index: -2;
   background-image: url("../img/praline3.png");
 }
 
 .prlx7 {
-  height: 20vw;
-  width: 20vw;
+  height: 22vw;
+  width: 22vw;
   left: 5%;
-  bottom: -70vw;
+  bottom: -62vw;
   z-index: -2;
-  background-image: url("../img/cupcake2.jpg");
+  background-image: url("../img/cupcake2.png");
 }
 
 .prlx8 {
   height: 6vw;
   width: 6vw;
   left: 5%;
-  bottom: 13vw;
+  bottom: 21vw;
   z-index: -3;
-  background-image: url("../img/praline3.png");
+  background-image: url("../img/praline3.1.png");
 }
 
 .prlx9 {
   height: 5vw;
   width: 5vw;
   left: 60%;
-  bottom: 5vw;
-  z-index: -3;
+  bottom: 8vw;
+  z-index: -2;
   background-image: url("../img/raspberry1.png");
+  opacity: 0.6;
+}
+
+.prlx10 {
+  height: 8vw;
+  width: 8vw;
+  left: 40%;
+  bottom: 28vw;
+  z-index: -3;
+  background-image: url("../img/cupcake1.1.png");
+  opacity: 0.8;
+}
+
+.prlx11 {
+  height: 20vw;
+  width: 20vw;
+  left: 35%;
+  bottom: -53vw;
+  z-index: -3;
+  background-image: url("../img/praline2.png");
+}
+
+@media (min-width: 800px) {
+  .section_parallax {
+    height: 40vw;
+  }
+  .prlx1 {
+    bottom: -28vw;
+  }
+  .prlx2 {
+    bottom: -13vw;
+  }
+  .prlx3 {
+    bottom: -48vw;
+  }
+  .prlx4 {
+    bottom: 7vw;
+  }
+  .prlx5 {
+    bottom: 0vw;
+  }
+  .prlx6 {
+    bottom: -2vw;
+  }
+  .prlx7 {
+    bottom: -72vw;
+  }
+  .prlx8 {
+    bottom: 11vw;
+  }
+  .prlx9 {
+    bottom: 8vw;
+  }
+  .prlx10 {
+    bottom: 18vw;
+  }
+  .prlx11 {
+    bottom: -63vw;
+  }
 }
 
 .section_third {
@@ -355,6 +431,8 @@ header h1::after {
   width: 100%;
   background-color: white;
   top: -2.5vh;
+  border-top: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
 }
 
 /*# sourceMappingURL=styles.css.map */
