--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,8 @@ header h1::after {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -ms-flex-direction: column;
+      flex-direction: column;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -ms-flex-align: center;
@@ -270,12 +272,24 @@ header h1::after {
   padding-bottom: 30px;
 }
 
+@media (min-width: 650px) {
+  .sf_textblock {
+    width: 500px;
+  }
+  .sf_pic {
+    height: 360px;
+    width: 543.72px;
+  }
+}
+
 @media (min-width: 800px) {
   .section_first {
     padding-top: 100px;
   }
   .sf_container {
     margin-bottom: 0px;
+    -ms-flex-direction: row;
+        flex-direction: row;
   }
   .sf_header {
     margin-bottom: 50px;
@@ -285,7 +299,7 @@ header h1::after {
   }
   .sf_pic {
     height: 360px;
-    width: auto;
+    width: 543.72px;
   }
 }
 
@@ -525,14 +539,14 @@ header h1::after {
   transform: scale(1.05);
   transition: 0.5s;
   overflow: hidden;
-  background-size: contain;
+  background-size: cover;
   cursor: pointer;
 }
 
 .st_pic div {
   background-color: rgba(208, 0, 60, 0.65);
-  height: 100%;
-  width: 100%;
+  height: 200px;
+  width: 300px;
   position: absolute;
 }
 
@@ -552,7 +566,7 @@ header h1::after {
   position: absolute;
   height: 200px;
   width: 300px;
-  left: -100%;
+  left: -300px;
   background-color: transparent;
   border-bottom: 100px solid transparent;
   border-top: 100px solid rgba(208, 0, 60, 0.65);
@@ -596,7 +610,7 @@ header h1::after {
 }
 
 .st_picdiv_inactive div {
-  right: -200%;
+  right: -600px;
   transition: 0.5s;
 }
 
