--- a/css/styles.css
+++ b/css/styles.css
@@ -3035,7 +3035,7 @@ body {
 
 header {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   background-color: #935638;
   background: url("../img/header_background.jpg");
   background-position: center;
@@ -3713,7 +3713,7 @@ footer {
   background-color: #fff4f7;
   height: 80px;
   position: relative;
-  overflow: auto;
+  overflow: hidden;
   color: #d0003c;
   border-bottom: 2px solid #d0003c;
 }
